mpsoc_output/output/gpio_1214_26032026/test_gpio_pedge_all_pads_en/program.c
/* Autogenerated by Code_Generator Agent (IST 12:14 26-03-2026)
 * Source Test Case: test_gpio_pedge_all_pads_en
 */
#include "test_define.c"

extern volatile int int_pend;

void test_case(void)
{
    unsigned int test_err = 0;

#ifdef GPIO0
    GIC_EnableIRQ(87);
#endif
#ifdef GPIO1
    GIC_EnableIRQ(88);
#endif

#ifdef GPIO0
    write_reg(MIZAR_LSS_SYSREG_INTR_EN1, LSS_SYSREG_INTR_EN1_GPIO0_INTR);
#endif
#ifdef GPIO1
    write_reg(MIZAR_LSS_SYSREG_INTR_EN1, LSS_SYSREG_INTR_EN1_GPIO1_INTR);
#endif

    for (unsigned int i = 0; i < 32; ++i)
        write_reg(MIZAR_GPIO_GP0_GPIO_8 + (i * 4), 0x00020000);

    wait_on(10);

    write_reg(MIZAR_GPIO_GPIO_IO_CTRL_GROUP1, 0x000000FF);
    write_reg(MIZAR_GPIO_GPIO_IO_CTRL_GROUP2, 0x000000FF);
    write_reg(MIZAR_GPIO_GPIO_IO_CTRL_GROUP3, 0x000000FF);
    write_reg(MIZAR_GPIO_GPIO_IO_CTRL_GROUP4, 0x000000FF);

    wait_on(10);

    write_reg(MIZAR_GPIO_GP0_INTR1_INTR_EN1, 0xFFFFFFFF);

    for (unsigned int i = 0; i < 32; ++i)
    {
        write_reg(0xA0243FFC, 0x00000000);
        wait_on(10);
        int_pend = 1;
        write_reg(0xA0243FFC, 0xFFFFFFFF);

        int timeout = 2000;
        while ((int_pend == 1) && (--timeout > 0)) {
            wait_on(10);
        }
        if (timeout == 0) {
            test_err++;
            break;
        }

        write_reg(0xA0243FFC, 0x00000000);
        wait_on(10);
    }

    finish(test_err);
}

void Default_IRQHandler(void)
{
    unsigned int rdata, rdata_grp;

    rdata_grp = read_reg(MIZAR_GPIO_GP0_INTR1_INTR_STS1);
    write_reg(MIZAR_GPIO_GP0_INTR1_INTR_EN1, 0x00000000);

    if ((rdata_grp & 0xFFFFFFFFu) == 0)
    {
        // expected non-zero on entry
    }

    for (unsigned int j = 0; j < 32; ++j)
        write_reg(MIZAR_GPIO_GP0_GPIO_8 + (j * 4), 0x00010000);

    wait_on(2);

    rdata_grp = read_reg(MIZAR_GPIO_GP0_INTR1_INTR_STS1);

    if (rdata_grp != 0x0)
    {
        // error: group interrupt not cleared
    }

#ifdef GPIO0
    write_reg(MIZAR_LSS_SYSREG_RAW_STCR1, LSS_SYSREG_RAW_STCR1_GPIO0_INTR);
    rdata = read_reg(MIZAR_LSS_SYSREG_RAW_STCR1);
    (void)rdata;
#endif
#ifdef GPIO1
    write_reg(MIZAR_LSS_SYSREG_RAW_STCR1, LSS_SYSREG_RAW_STCR1_GPIO1_INTR);
    rdata = read_reg(MIZAR_LSS_SYSREG_RAW_STCR1);
    (void)rdata;
#endif

    write_reg(MIZAR_GPIO_GP0_INTR1_INTR_EN1, 0xFFFFFFFF);

#ifdef GPIO0
    GIC_ClearIRQ(87);
#endif
#ifdef GPIO1
    GIC_ClearIRQ(88);
#endif

    int_pend = 0;
}
